Bug 264863 - Application launcher disappears when closing the application
Summary: Application launcher disappears when closing the application
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-30 17:40 UTC by ippokratis
Modified: 2011-06-02 17:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot for example (53.18 KB, image/png)
2011-02-18 18:27 UTC, Fest
Details
Original ammount of launchers before they gonne missing. (68.37 KB, image/png)
2011-02-18 18:28 UTC, Fest
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ippokratis 2011-01-30 17:40:50 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

I use a launcher which is pinned to the taskbar to launch an application. Launcher turns into a task. After closing the application the task disappears but the launcher is not restored.

Reproducible: Sometimes

Steps to Reproduce:
Add an application as a launcher to the taskbar. Launch the application and then close it.

Actual Results:  
The task disappears as it should but the pinned launcher is no longer visible.

Expected Results:  
After closing the application, its launcher should be restored to the taskbar.

If I switch to another virtual desktop (and back) the launcher appears and works normally. Sometimes, usually after logging in I can not reproduce this bug. However it always exists after a while.
Comment 1 Fest 2011-02-18 16:02:17 UTC
Confirm that bug. Gentoo amd64, KDE 4.6.0.
Dissaperead launcher appears again after switching to another virtual desktop, even if launched application is still running.
Comment 2 Aaron J. Seigo 2011-02-18 17:40:31 UTC
are you both using "only show tasks on the current desktop"? if so, if you turn that off does the launcher start working properly?
Comment 3 Fest 2011-02-18 18:27:41 UTC
Created attachment 57356 [details]
Screenshot for example

I'm using with "only show tasks on the current desktop".
Funny thing, i just checked and without this option, switching to other virtual desktop and back, not restoring missing launcher. 
So i managed to loose 5 of 9 launchers without that option.
Comment 4 Fest 2011-02-18 18:28:47 UTC
Created attachment 57357 [details]
Original ammount of launchers before they gonne missing.
Comment 5 Aaron J. Seigo 2011-02-18 22:12:52 UTC
Git commit 85f221f26e4e6b8434af8b8bc5982c29e48e0fb7 by Aaron Seigo.
Committed on 18/02/2011 at 22:09.
Pushed by aseigo into branch 'KDE/4.6'.

keep launchers at the head of the list, always

BUG:264863
BUG:266612

M  +17   -1    libs/taskmanager/taskgroup.cpp     

http://commits.kde.org/kde-workspace/85f221f26e4e6b8434af8b8bc5982c29e48e0fb7
Comment 6 Aaron J. Seigo 2011-02-18 22:12:53 UTC
Git commit f498b20c879ba8a4dc853337ff4255ead225a3ac by Aaron Seigo.
Committed on 18/02/2011 at 22:09.
Pushed by aseigo into branch 'master'.

keep launchers at the head of the list, always

BUG:264863
BUG:266612

M  +17   -1    libs/taskmanager/taskgroup.cpp     

http://commits.kde.org/kde-workspace/f498b20c879ba8a4dc853337ff4255ead225a3ac
Comment 7 Fest 2011-06-02 17:55:29 UTC
KDE 4.6.80 (4.7 Beta 1). 
Bug is still not fixed.