keep launchers at the head of the list, always

BUG:264863
BUG:266612